styles/style.css
/* ... */
.main-non-text-container__stop-narration-btn-icon {
    fill: #fff;
}

/* media-viewer */
@media (min-width: 900px) {
    .media-viewer {
        width: 100%;
        z-index: 1;
    }
}

@media (max-width: 900px) and (orientation: portrait) {
    .media-viewer--main-section {
        width: 100%;
    }
}

@media (max-width: 900px) and (orientation: landscape) {
    .media-viewer--main-section {
        height: 95%;
    }
}

@media (min-width: 900px) {
    .media-viewer--main-section {
        flex: 1 1 auto;
        min-width: 0;
        max-height: 98%;
        display: flex;
        flex-direction: column;
    }
}

.media-viewer--summary-menu {
    width: 95%;
    height: 90%;
}

@media (min-width: 900px) {
    .media-viewer--summary-menu {
        width: 100%;
    }
}

.media-viewer--fullscreen {
    display: flex;
    justify-content: center;
    align-items: center;
}

.media-viewer--fullscreen-polyfill {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: #000;
    z-index: 100;
}

.media-viewer--hidden {
    display: none;
}

.media-viewer__tab-container {
    position: relative;
    left: 10px;
    display: inline-block;
    z-index: 2;
}

@media (max-width:900px) {
    .media-viewer__tab-container--main-section {
        display: none;
    }
}

.media-viewer__tab-container--fullscreen {
    display: none;
}

.media-viewer__tab-btn {
    margin: 0;
    box-sizing: border-box;
    width: 4.25em;
    height: 2.5em;
    padding: 0.1em 0.425em;
    border: 1px solid #444;
    border-radius: 10px 10px 0 0;
    background: #cccccc;
}

.media-viewer__tab-btn-vid--selected {
    border-bottom: 1px solid #ccc;
}

.media-viewer__tab-btn svg {
    margin: 0.15em 0.75em 0em 0.75em;
    width: 1.75em;
    height: 1.75em;
    fill: #ffffff;
}

.media-viewer__tab-btn-vid--selected svg {
    fill: #15404e;
}

.media-viewer__media-container {
    position: relative;
    box-sizing: border-box;
    box-shadow: 0px 0px 0 1px #444;
    border: 7px #cccccc solid;
    border-radius: 10px;
    background: #ffffff;
}

.media-viewer__media-container--tree-viewer {
    background: #363636;
}

@media (min-width:900px) {
    .media-viewer__media-container {
        width: 100%;
    }
}

.media-viewer__media-container--citation-attached {
    box-shadow: 0px -1px 0 0px #444, 1px 0px 0 0px #444, 0px 1px 0 0px #ccc, -1px 0px 0 0px #444;
    border-radius: 10px 10px 0px 0px;
}

@media (max-width: 900px) and (orientation: portrait) {
    .media-viewer__media-container--main-section {
        width: 100%;
    }
}

@media (max-width: 900px) and (orientation: landscape) {
    .media-viewer__media-container--main-section {
        height: 100%;
    }
}

@media (min-width:900px) {
    .media-viewer__media-container--main-section {
        flex: 1;
        min-height: 0;
        display: flex;
        flex-direction: column;
        align-items: center;
    }
}

.media-viewer__media-container--summary-menu {
    width: 100%;
    height: 100%;
}

.media-viewer__media-container--fixed-enlarged {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    border-radius: 10px;
    z-index: 100;
}

.media-viewer__media-container--fullscreen {
    box-shadow: 0px 0px 0 1px #444;
    border-radius: 10px;
}

@media (max-width: 900px) and (orientation: landscape) {
    .media-viewer__media-container--fullscreen {
        height: 100%;
    }
}

@media (max-width: 900px) and (orientation: portrait) {
    .media-viewer__media-container--fullscreen {
        width: 100%;
    }
}

.media-viewer__media-container--fullscreen-protein-viewer {
    width: 100%;
    height: 100%;
}

.media-viewer__graphic {
    display: block;
    width: 100%;
    object-fit: contain;
}

@media (max-width: 900px) {
    .media-viewer__graphic {
        max-height: 50vh;
    }
}

.media-viewer__graphic--fullscreen {
    width: auto;
    height: auto;
    max-height: none;
}

@media (max-width: 900px) and (orientation: landscape) {
    .media-viewer__graphic--fullscreen {
        height: 100%;
    }
}

@media (max-width: 900px) and (orientation: portrait) {
    .media-viewer__graphic--fullscreen {
        width: 100%;
    }
}

.media-viewer__fullscreen-btn {
    position: absolute;
    bottom: 0;
    right: 0;
    margin: 0;
    box-sizing: border-box;
    width: 2.75em;
    height: 2.75em;
    padding: 0.75em;
    border: none;
    border-radius: 10px 0 0 0;
    background: #ffffff87;
    z-index: 2;
}

.media-viewer__fullscreen-btn--hidden {
    display: none;
}

.media-viewer__fullscreen-btn-icon {
    width: 100%;
    height: 100%;
    fill: #15404e;
}

.media-viewer__fullscreen-btn-icon--hidden {
    display: none;
}

/* search-bar */
.search-widget--nav-menu {
    margin: 0.25em 0.25em 0.25em -0.5em;
}

@media (min-width: 900px) {
    .search-widget--nav-menu {
        display: none;
    }
}

.search-widget--header {
    flex: 0 1 auto;
    min-width: 0;
    position: relative;
    margin: 0 3em;
}

@media (max-width: 900px) {
    .search-widget--header {
        display: none;
    }
}

.search-widget__open-btn {
    position: absolute;
    left: 0;
    top: 0;
    margin: 0;
    box-sizing: border-box;
    width: 3em;
    height: 3em;
    border: 2px solid #cfcfcf00;
    border-radius: 100px;
    padding: 0.5em;
    background: none;
    opacity: 1;
    transition: border 0.25s, opacity 0.25s, visibility 0.25s;
}

.search-widget__open-btn--hidden {
    opacity: 0;
    border: 2px solid #cfcfcf00;
    visibility: hidden;
}

.search-widget__open-btn:hover {
    border: 2px solid #cfcfcf;
}

.search-widget__search-icon--nav-menu {
    width: 1.25em;
    height: 1.25em;
    stroke: #363636;
    fill: #363636;
}

.search-widget__search-icon--header {
    width: 1.75em;
    height: 1.75em;
    stroke: #fff;
    fill: #fff;
}

.search-widget__search-icon--search-bar {
    flex: 0 0 auto;
    margin-right: 1em;
}
/* ... */

